# S-Coda

./: .gitignore  CHANGELOG.md  DIST.md  LICENSE.md  README.md  flake.nix  guide.md  pyproject.toml  requirements.txt  setup.py
.github/: main.yml
.github/workflows/: main.yml  pytest.yml  scoda_publish.yml  scoda_test.yml
.gitlab/pipelines/: .gitlab-ci.yml
sCoda/: __init__.py  settings.py
sCoda/elements/: bar.py  composition.py  message.py  sequence.py  track.py
sCoda/exception/: exceptions.py
sCoda/sequence/: absolute_sequence.py  abstract_sequence.py  relative_sequence.py  sequence.py
sCoda/util/: hn_iterator.py  logging.py  midi_wrapper.py  music_theory.py  util.py
s_coda/: __init__.py  settings.py
s_coda/elements/: bar.py  composition.py  message.py  track.py
s_coda/exception/: exceptions.py
s_coda/sequence/: absolute_sequence.py  abstract_sequence.py  relative_sequence.py  sequence.py
s_coda/util/: logging.py  midi_wrapper.py  util.py
scoda/: __init__.py  settings.py
scoda/config/: logging.conf  settings.json
scoda/elements/: bar.py  composition.py  message.py  track.py
scoda/enumerations/: message_type.py  tokenisation_flags.py  tokenisation_prefixes.py  tokeniser_type.py
scoda/exceptions/: bar_exception.py  composition_exception.py  exceptions.py  sequence_exception.py  tokenisation_exception.py  track_exception.py
scoda/midi/: midi_file.py  midi_message.py  midi_track.py
scoda/misc/: decorators.py  music_theory.py  scoda_logging.py  util.py
scoda/sequences/: absolute_sequence.py  abstract_sequence.py  difficulty_engine.py  relative_sequence.py  sequence.py
scoda/settings/: settings.json  settings.py
scoda/tokenisation/: base_tokenisation.py  gridlike_tokenisation.py  midilike_tokenisation.py  multi_instrument_notelike_tokeniser.py  notelike_tokenisation.py  notelike_tokeniser.py  transposed_gridlike_tokenisation.py  transposed_notelike_tokenisation.py
scoda/utils/: decorators.py  enumerations.py  logging.py  midi_wrapper.py  music_theory.py  scoda_logging.py  tokenisation.py  util.py
test/: base.py  test_absolute_sequence.py  test_bar.py  test_composition.py  test_mido.py  test_misc.py  test_music_theory.py  test_plot.py  test_relative_sequence.py  test_scoda.py  test_sequence.py  test_track.py  test_util.py  test_wip.py
test/cases/: base.py  fixtures.py  test_absolute_sequence.py  test_bar.py  test_cases.py  test_composition.py  test_edge_cases.py  test_misc.py  test_music_theory.py  test_relative_sequence.py  test_s_coda.py  test_sequence.py  test_tokenisation.py  test_track.py  test_util.py  test_wip.py  util.py
test/res/: empty_bars.mid  (+3 more)
(+4 files in other folders)
