[project]
name = "scoda"
version = "2.0-beta.2"
authors = [{ name = "Felix Schön", email = "schoen@kr.tuwien.ac.at" }]
description = "A MIDI and music data manipulation library"
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["midi", "music"]
license = { file = "LICENSE.md" }
dependencies = [
    "matplotlib >= 3.8",
    "numpy >= 1.26",
    "mido >= 1.3"
]

[project.urls]
"Homepage" = "https://github.com/FelixSchoen/S-Coda"
"Bugtracker" = "https://github.com/FelixSchoen/S-Coda/issues"

[project.optional-dependencies]
test = [
    "pytest >= 7.4",
    "pytest-xdist >= 3.5",
    "pytest-cov >= 4.1",
    "coverage >= 7.3"
]
deploy = [
    "build >= 1.0",
    "twine >= 4.0",
    "pdoc3 >= 0.10"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.json", "*.conf"]