[project]
name = "scoda"
version = "2.2.2"
authors = [{ name = "Felix Schön", email = "schoen@kr.tuwien.ac.at" }]
description = "A MIDI and music data manipulation library"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["midi", "music"]
license = { file = "LICENSE.md" }
dependencies = [
    "mido",
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/FelixSchoen/S-Coda"
"Bugtracker" = "https://github.com/FelixSchoen/S-Coda/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "coverage"
]
deploy = [
    "build",
    "twine",
    "pdoc3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.json", "*.conf"]